src/patternfly/components/MenuToggle/menu-toggle.scss
/* ... */
// - Menu toggle typeahead
.#{$menu-toggle}.pf-m-typeahead {
  --#{$menu-toggle}__button--AlignSelf: var(--#{$menu-toggle}--m-typeahead__button--AlignSelf);
  --#{$menu-toggle}--Gap: 0;

  align-items: stretch;
  padding: 0;

  .#{$menu-toggle}__button {
    --#{$menu-toggle}__button--PaddingInlineEnd: 0;
  }

  .#{$menu-toggle}__controls {
    --#{$menu-toggle}__button--PaddingInlineEnd: 0;

    display: flex;
    align-items: stretch;
  }

  .#{$text-input-group} {
    --#{$text-input-group}__utilities--MarginInlineEnd: 0;

    flex: 1;
  }
}

// - Menu toggle button
.#{$menu-toggle}__button {
  gap: var(--#{$menu-toggle}__button--Gap);
  align-self: var(--#{$menu-toggle}__button--AlignSelf);
  min-width: var(--#{$menu-toggle}__button--MinWidth);
  padding-inline-start: var(--#{$menu-toggle}__button--PaddingInlineStart);
  padding-inline-end: var(--#{$menu-toggle}__button--PaddingInlineEnd);
  color: inherit;
  background-color: var(--#{$menu-toggle}__button--BackgroundColor);
  border: 0;

  &.pf-m-text {
    display: inline-flex;
    align-items: baseline;
  }

  @at-root .#{$menu-toggle}.pf-m-split-button > .#{$check}.pf-m-standalone,
  &:has(> .#{$menu-toggle}__controls:only-child) {
    padding-inline-start: var(--#{$menu-toggle}__button--toggle-icon--PaddingInlineStart);
    padding-inline-end: var(--#{$menu-toggle}__button--toggle-icon--PaddingInlineEnd);
  }
}

.#{$menu-toggle}__text {
  @include pf-v6-text-overflow;

  min-width: 0;
}

.#{$menu-toggle}__count {
  display: flex;
  flex-wrap: nowrap;
}

.#{$menu-toggle}__icon {
  flex-shrink: 0;

  &.pf-m-avatar {
    .#{$avatar},
    img,
    svg {
      margin-block-start: calc(var(--#{$menu-toggle}--PaddingBlockStart) * -1);
      margin-block-end: calc(var(--#{$menu-toggle}--PaddingBlockEnd) * -1);
    }
  }
}

// - Menu toggle controls
.#{$menu-toggle}__controls {
  display: flex;
  gap: var(--#{$menu-toggle}__controls--Gap);
  align-items: center;
  justify-content: center;
  margin-inline-start: auto; // TODO: possibly replace as part of one of the other TODOs at top of file
}

// - Menu toggle icon
.#{$menu-toggle}__toggle-icon {
  min-height: var(--#{$menu-toggle}__toggle-icon--MinHeight);
  color: var(--#{$menu-toggle}__toggle-icon--Color, inherit);
}

// - Menu toggle status icon
.#{$menu-toggle}__status-icon {
  color: var(--#{$menu-toggle}__status-icon--Color, inherit);
}

